[gd_scene load_steps=3 format=3 uid="uid://bj4ejqut034iv"]

[ext_resource type="Script" uid="uid://b25vrt4cspbi2" path="res://control/mobile_controls/mobile_ui.gd" id="1_t1u02"]
[ext_resource type="PackedScene" uid="uid://cjqgyp1svdta7" path="res://control/mobile_controls/virtual_joystick.tscn" id="2_gwnrb"]

[node name="MobileUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1u02")

[node name="MovementJoystick" parent="." instance=ExtResource("2_gwnrb")]
unique_name_in_owner = true
layout_mode = 1

[node name="CameraJoystick" parent="." instance=ExtResource("2_gwnrb")]
unique_name_in_owner = true
layout_mode = 1

[node name="PrimaryButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="SecondaryButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="GrabButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
